--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -21,7 +21,7 @@ jobs:
       # 3) Build and push image
       - name: Build & Push Docker image
         run: |
-          docker build -t $IMAGE_NAME:latest .
+          DOCKER_BUILDKIT=1 docker build -t $IMAGE_NAME:latest .
           docker push $IMAGE_NAME:latest
 
       # 4) Run container on GitHub runner
